# ai-financial-analyst

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: demo.yml
config/: company.yaml  model_selection.yaml
dashboard/: PANW_3Statement_Model.xlsx  PANW_3Statement_Model_HOWTO.md  Tableau_Setup.md  _Tableau_Setup_template.md
dashboard/notebooklm_bundle/: 01_company_overview.md  04_historical_financials.csv  05_forecast_summary.md  06_excel_model_summary.md  08_test_report.html  09_eval_report.md  README_FOR_NOTEBOOKLM.md
dashboard/screenshots/: README.md
dashboard/tableau_data/: dim_date.csv  dim_filing.csv  dim_metric.csv  fact_consensus.csv  fact_financials.csv  fact_forecasts.csv
dashboard/tableau_workbook/: PANW Dashboard.twbx  PANW_Dashboard.twb  PANW_Dashboard.twbx
docs/: ARCHITECTURE.md  HOW_TO_DEMO.md  MODELING_DECISIONS.md
notebooks/: 01_explore_warehouse.ipynb  02_baseline_forecast.ipynb  03_macro_regularized_forecast.ipynb
src/: __init__.py  build_excel_model.py  build_notebooklm_bundle.py  build_variance_facts.py  build_warehouse.py  company_resolver.py  export_for_tableau.py  generate_commentary.py  ingest_edgar.py  select_models.py  validate_commentary.py
src/prompts/: __init__.py  commentary_system_v1.md
tests/: __init__.py  test_commentary_guard.py  test_commentary_retry.py  test_company_resolver.py  test_excel_model.py  test_macro_features.py  test_notebooklm_bundle.py  test_tableau_export.py  test_validate_commentary.py  test_variance_facts.py  test_warehouse.py
tests/eval/: __init__.py  test_eval_pipeline.py
tests/eval/fixtures/: 01_volume_driven.json  02_margin_driven.json  03_one_time.json  04_mix_not_computable.json  05_restatement.json
tests/fixtures/: restatement_companyfacts.json
