[project]
name = "ai-financial-analyst"
version = "0.1.0"
requires-python = ">=3.11"
description = "End-to-end AI-augmented financial forecasting on free SEC EDGAR + FRED data"

# ── Ruff (lint + format) ─────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W: pycodestyle  F: pyflakes  I: isort  N: naming
# UP: pyupgrade     B: bugbear   SIM: simplify  C4: comprehensions
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.per-file-ignores]
# Tests: allow assert, magic numbers, nested with, print
"tests/**" = ["S101", "PLR2004", "SIM117", "T20"]
# build_warehouse.py: SQL string literals exceed line length — not reformattable
"src/build_warehouse.py" = ["E501"]
# build_excel_model.py: list comprehensions with long cell-reference expressions
"src/build_excel_model.py" = ["E501"]
# export_for_tableau.py / build_variance_facts.py: long SQL and row-access expressions
"src/export_for_tableau.py"    = ["E501"]
"src/build_variance_facts.py"  = ["E501"]
# generate_commentary.py: long system-prompt string literals and SQL-like patterns
"src/generate_commentary.py"   = ["E501"]
# build_notebooklm_bundle.py: long conditional expressions and subprocess calls
"src/build_notebooklm_bundle.py" = ["E501"]
# test_macro_features.py: sklearn convention — matrix variable names are uppercase (X, X_train)
"tests/test_macro_features.py" = ["N803", "N806"]
# test_tableau_export.py: unused variable in test setup pattern is conventional
"tests/test_tableau_export.py" = ["F841", "E501"]

# ── Mypy (strict type checking) ──────────────────────────────────────────────
[tool.mypy]
strict = true
python_version = "3.11"

# These packages either lack stubs or ship their own py.typed — ignore their
# import-untyped / import-not-found errors for the current dependency set.
[[tool.mypy.overrides]]
module = [
    "openpyxl",
    "openpyxl.*",
    "tableauhyperapi",
    "yfinance",
    "fredapi",
    "prophet",
    "statsforecast",
    "statsforecast.*",
    "cmdstanpy",
    "papermill",
    "duckdb",
    "shap",
    "numba",
    "deepdiff",
]
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=60"

# ── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
# These modules contain openpyxl / file I/O heavy logic or live API calls;
# tested via integration rather than unit tests.
omit = [
    "src/build_excel_model.py",
    "src/build_notebooklm_bundle.py",
    "src/select_models.py",
]

# ── Bandit (security scanning) ───────────────────────────────────────────────
[tool.bandit]
# Medium severity / medium confidence — stop false positives from subprocess,
# yaml.safe_load, and requests usage that's already validated.
severity = "medium"
confidence = "medium"
skips = [
    "B101",   # use of assert — acceptable in tests and internal guards
    "B404",   # subprocess import — used intentionally for pytest runner
    "B603",   # subprocess call without shell=True — safe; we control args
    "B607",   # start process with partial path — sys.executable is controlled
    "B608",   # hardcoded SQL — all f-string values are internal constants /
              # file paths derived from config; no user input reaches SQL
]
